lzt-report-icons/report-icons.scss
/*
  This file is autogenerated. DON'T edit it manually.

  Exclusive for LZT Upgrade.
  Socials:
    - Telegram (https://t.me/lzt_upgrade)
    - Github (https://github.com/lzt-upgrade)
  Authors:
    - Toil (https://lolz.live/toil/)
*/

@mixin svg-icon {
  width: 0.65em !important;
  height: 0.65em !important;
  align-self: center !important;
  background-size: 100% !important;
  background-repeat: no-repeat !important;
  padding: 5px !important;
  margin: -5px 0 !important;
}

.lztup-report-offtop {
  @include svg-icon;
  background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 50 49' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.4057 34.4911V42.167L24.9656 34.7452L26.2784 34.7237C31.4985 34.6382 36.1963 34.1127 39.7089 33.5782C41.9258 33.2409 43.4662 31.6938 43.8008 29.7511C44.265 27.0564 44.6604 23.6425 44.6604 19.8491C44.6604 16.0556 44.265 12.6416 43.8008 9.94696C43.4662 8.00437 41.9258 6.45717 39.7089 6.11987C35.867 5.5353 30.613 4.96227 24.8113 4.96227C19.0096 4.96227 13.7556 5.5353 9.91363 6.11987C7.69679 6.45717 6.15643 8.00437 5.8218 9.94696C5.35766 12.6417 4.96226 16.0556 4.96226 19.8491C4.96226 23.6425 5.35766 27.0564 5.8218 29.7511C6.11239 31.4381 7.29087 32.7902 9.0092 33.3616L12.4057 34.4911ZM0.931562 9.10461C1.65156 4.92474 4.97398 1.85211 9.16726 1.21409C13.185 0.602746 18.6967 0 24.8113 0C30.9258 0 36.4376 0.602746 40.4554 1.21409C44.6486 1.85211 47.971 4.92474 48.691 9.10461C49.1928 12.0178 49.6225 15.7186 49.6225 19.8491C49.6225 23.9795 49.1928 27.6802 48.691 30.5934C47.971 34.7733 44.6486 37.846 40.4554 38.484C36.7797 39.0432 31.8537 39.5953 26.3597 39.6854L11.1867 48.6511C9.53276 49.6285 7.44336 48.4363 7.44336 46.5151V38.0703C4.08533 36.9537 1.54962 34.1815 0.931562 30.5934C0.429763 27.6802 0 23.9795 0 19.8491C0 15.7186 0.429763 12.0178 0.931562 9.10461Z' fill='%23949494'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.4057 12.4058C11.0354 12.4058 9.9245 13.5167 9.9245 14.8869C9.9245 16.2572 11.0354 17.3681 12.4057 17.3681H37.217C38.5872 17.3681 39.6981 16.2572 39.6981 14.8869C39.6981 13.5167 38.5872 12.4058 37.217 12.4058H12.4057ZM12.4057 22.3303C11.0354 22.3303 9.9245 23.4412 9.9245 24.8114C9.9245 26.1818 11.0354 27.2926 12.4057 27.2926H22.3302C23.7005 27.2926 24.8113 26.1818 24.8113 24.8114C24.8113 23.4412 23.7005 22.3303 22.3302 22.3303H12.4057Z' fill='%23949494'/%3E%3C/svg%3E%0A") !important;
}

.reportReasons label:has(> .lztup-report-offtop):hover .lztup-report-offtop {
  background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 50 49' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.4057 34.4911V42.167L24.9656 34.7452L26.2784 34.7237C31.4985 34.6382 36.1963 34.1127 39.7089 33.5782C41.9258 33.2409 43.4662 31.6938 43.8008 29.7511C44.265 27.0564 44.6604 23.6425 44.6604 19.8491C44.6604 16.0556 44.265 12.6416 43.8008 9.94696C43.4662 8.00437 41.9258 6.45717 39.7089 6.11987C35.867 5.5353 30.613 4.96227 24.8113 4.96227C19.0096 4.96227 13.7556 5.5353 9.91363 6.11987C7.69679 6.45717 6.15643 8.00437 5.8218 9.94696C5.35766 12.6417 4.96226 16.0556 4.96226 19.8491C4.96226 23.6425 5.35766 27.0564 5.8218 29.7511C6.11239 31.4381 7.29087 32.7902 9.0092 33.3616L12.4057 34.4911ZM0.931562 9.10461C1.65156 4.92474 4.97398 1.85211 9.16726 1.21409C13.185 0.602746 18.6967 0 24.8113 0C30.9258 0 36.4376 0.602746 40.4554 1.21409C44.6486 1.85211 47.971 4.92474 48.691 9.10461C49.1928 12.0178 49.6225 15.7186 49.6225 19.8491C49.6225 23.9795 49.1928 27.6802 48.691 30.5934C47.971 34.7733 44.6486 37.846 40.4554 38.484C36.7797 39.0432 31.8537 39.5953 26.3597 39.6854L11.1867 48.6511C9.53276 49.6285 7.44336 48.4363 7.44336 46.5151V38.0703C4.08533 36.9537 1.54962 34.1815 0.931562 30.5934C0.429763 27.6802 0 23.9795 0 19.8491C0 15.7186 0.429763 12.0178 0.931562 9.10461Z' fill='%23F5F5F5'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.4057 12.4058C11.0354 12.4058 9.9245 13.5167 9.9245 14.8869C9.9245 16.2572 11.0354 17.3681 12.4057 17.3681H37.217C38.5872 17.3681 39.6981 16.2572 39.6981 14.8869C39.6981 13.5167 38.5872 12.4058 37.217 12.4058H12.4057ZM12.4057 22.3303C11.0354 22.3303 9.9245 23.4412 9.9245 24.8114C9.9245 26.1818 11.0354 27.2926 12.4057 27.2926H22.3302C23.7005 27.2926 24.8113 26.1818 24.8113 24.8114C24.8113 23.4412 23.7005 22.3303 22.3302 22.3303H12.4057Z' fill='%23F5F5F5'/%3E%3C/svg%3E%0A") !important;
}

.lztup-report-incorrect-design {
  @include svg-icon;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24'%3E%3Cpath fill='%23949494' d='M12 3a9 9 0 0 0-9 9c0 5.004 3.715 8.897 8.653 8.897h.003q-.071-.118-.156-.252l-.02-.032c-.4-.637-.71-1.466-.653-2.375c.059-.942.505-1.856 1.414-2.616c1.032-.863 2.263-.884 3.218-.847q.322.014.608.03c.758.041 1.358.074 1.947-.085c1.852-.5 2.881-1.73 2.988-3.323C21.323 6.62 17.115 3 12 3M1 12C1 5.925 5.925 1 12 1c5.931 0 11.418 4.286 10.998 10.53c-.173 2.566-1.908 4.431-4.463 5.12c-.932.252-1.932.193-2.708.148q-.24-.016-.447-.024c-.917-.036-1.45.043-1.855.381c-.527.441-.68.86-.702 1.208c-.024.38.106.796.35 1.185l.027.043c.096.153.236.374.352.605c.12.239.278.604.29 1.013a1.5 1.5 0 0 1-.7 1.338c-.425.275-.959.35-1.49.35C5.546 22.897 1 18.042 1 12m8.75-4.996a2 2 0 1 1 4 0a2 2 0 0 1-4 0m-4.72 3a2 2 0 1 1 4 0a2 2 0 0 1-4 0m9.488 0a2 2 0 1 1 4 0a2 2 0 0 1-4 0'/%3E%3C/svg%3E") !important;
}
/* ... */

